--- a/sprints/src/public/index.html
+++ b/sprints/src/public/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MERN Stack </title>
+    <title> </title>
 </head>
 <body>
-<h1>hola mundo </h1>
     <div id="app" ></div>
 
     <!-- Scripts  -->
